2007-03-28	Nicholas Niro	<nik_89@neuroponic.com>
	* configure.ac: removed checks for c++ in the script.
	Made the project use autoheader so the compilation
	process takes less arguments. Started to implement
	the symbols libtool call so libneuro would only
	export specific functions.

2007-03-28	Nicholas Niro	<nik_89@neuroponic.com>
	* src/Makefile.am: cleaned the script and started to
	implement a libtool symbol export file so libneuro 
	would be able to only export functions that we 
	choose.

2007-03-28	Nicholas Niro	<nik_89@neuroponic.com>
	* ChangeLog: redesigned to suit the GNU coding standard.
	Please note that the file does not contain all the entries
	that it should for past work. Future work will all be logged
	however.

2007-02-24	Paul Keller	<geniack@neuroponic.com>
	* src/misc/bitmap.c: cleaned the file from any /* old */
	code and also those disabled by preprocessor macros.

2006-12-06	Nicholas Niro	<nik_89@neuroponic.com>
	* src/misc/bitmap.c: the bitmap loader was changed to
	remove any need of the library xpm. It now uses 
	high level pixel IO functions to load the bitmaps.

2006-12-04	Robert Lemay	<bob@neuroponic.com>
	* extlib/x11.c (Lib_SetColorKey): implemented a completely new
	fully working X11 transparency function that sets a certain color
	to transparent in a v_object. The old implementation was a hack
	to pass a non REENTRANT variable to misc/bitmap.c.

2006-10-02	Nicholas Niro	<nik_89@neuroponic.com>
	* video module: spreaded the code of the module (especially
	the code concerning the painter's algorithm) among more than
	one source file for a better split of tasks and thus a better
	organisation of the code.

2006-08-25	Nicholas Niro	<nik_89@neuroponic.com>
	* configure.ac: included the freetype2 library as 
	a dependency.

2006-08-25	Nicholas Niro	<nik_89@neuroponic.com>
	* src/extlib/x11.c: implemented fonts support.

2006-04-21	Nicholas Niro	<nik_89@neuroponic.com>
	* src/video/graphics.c: the functions to add dynamic