@@ -1,0 +1,93 @@
+Neuro_AddBackground
+Neuro_AddDirectDrawing
+Neuro_AddPressedKeyEvent
+Neuro_AddPressedMouseEvent
+Neuro_AddPressedMultiKeyEvent
+Neuro_AddReleasedKeyEvent
+Neuro_AddReleasedMouseEvent
+Neuro_AddReleasedMultiKeyEvent
+Neuro_AllocEBuf
+Neuro_ArgClean
+Neuro_ArgInit
+Neuro_ArgOption
+Neuro_ArgProcess
+Neuro_BlitObject
+Neuro_BoundsCheck
+Neuro_CalcOnlyPos
+Neuro_CleanDraw
+Neuro_CleanEBuf
+Neuro_CleanFont
+Neuro_CleanKeyboard
+Neuro_CleanMouse
+Neuro_CleanPixels
+Neuro_CopyEBuf
+Neuro_CreateEBuf
+Neuro_CreateVObject
+Neuro_DebugChannel
+Neuro_DebugPrint
+Neuro_DestroyDraw
+Neuro_DumbBoundsCheck
+Neuro_EBufIsEmpty
+Neuro_FetchDraw
+Neuro_FlushDraw
+Neuro_FreeVObject
+Neuro_GetMousePos
+Neuro_GetPixel
+Neuro_GetScreenBuffer
+Neuro_GetScreenSize
+Neuro_GetTickCount
+Neuro_GiveConvertRGB
+Neuro_GiveCurEBuf
+Neuro_GiveEBuf
+Neuro_GiveEBufAddr
+Neuro_GiveEBufCore
+Neuro_GiveEBufCount
+Neuro_GiveEBufElem
+Neuro_GiveFPS
+Neuro_GiveImageSize
+Neuro_GiveRGB
+Neuro_GiveRGB16
+Neuro_GiveRGB24
+Neuro_GiveRGB32
+Neuro_GiveRGB8
+Neuro_GiveRGBA_special
+Neuro_HorizontalBoundCrop
+Neuro_Init
+Neuro_LoadBMP
+Neuro_LoadFontFile
+Neuro_LockVObject
+Neuro_MapRGB
+Neuro_MultiAllocEBuf
+Neuro_Poll
+Neuro_PrintFPS
+Neuro_PushDraw
+Neuro_PushDynamicDraw
+Neuro_PushStaticDraw
+Neuro_PushVolatileDraw
+Neuro_PutPixel
+Neuro_Quit
+Neuro_RawGetPixel
+Neuro_RawPutPixel
+Neuro_RedrawScreen
+Neuro_RefreshScreen
+Neuro_RenderUnicode
+Neuro_ResetEBuf
+Neuro_SCleanEBuf
+Neuro_SepChr
+Neuro_SepChr2
+Neuro_SetAlpha
+Neuro_SetColorKey
+Neuro_SetDebugLevel
+Neuro_SetDraw
+Neuro_SetEBuf
+Neuro_SetFpsLimit
+Neuro_SetFrameSkip
+Neuro_SetImgLayer
+Neuro_SetImgPos
+Neuro_SetImgSrcPos
+Neuro_SetScreenSize
+Neuro_SetcallbEBuf
+Neuro_Sleep
+Neuro_SyncPixels
+Neuro_UnlockVObject
+Neuro_VerticalBoundCrop
