@@ -1,5 +1,6 @@
 
 include_HEADERS = \
+		  config.h \
 		  NEURO.h \
 		  debug.h \
 		  ebuf.h \
